
Settings
* Fixed: Disabled Alert groups were not initiating correctly after loading a new session.
* Fixed: Disabled Timer groups were not initiating correctly after loading a new session.
* Fixed: Disabled Cast Filter groups were not initiating correctly after loading a new session.
* Note: Any settings you made to disable any of the above groups will now be applied automatically.

Engine
* Triggers
** New: Triggers can now be enabled/disabled via Mods real-time.
** New: Added NPC Damaged based triggers for rare fail-safes.
* HP Monitoring
** New: Unit HP tracking in various applications will now be tracked even when not selected by a raid/group memeber.
** New: Major increase in Unit HP tracking effeciency and accuracy.
** Note: The above changes should be most notable in the Phase Monitors percentage based objectives.
** Note: Tracked Units will need to be "seen" at least once by the raid/group. This is an API restriction.

Phase Monitor
* Percentage Objectives
** New: Now have an HP bar displayed for each Unit tracked.

Records
* Fixed: Dates were not correctly being recorded.

Hammerknell
* Inwar Darktide
** New: Added Timer for the appearance of the first Geyser in Phase 2.
** New: Added Timer for the appearance of all subsequent Geysers in Phase 2 and Phase 3.
* Akylios
** New: Added fail-safe trigger for phase 4. Damage to Jornaru should now trigger P4 if Akylios is submerged.
** Note: Accuracy of timers triggered this way will be dependent on reaction times to damaging Jornaru.
** Note: But should be less inaccurate than when P4 hits early during submerge phases.

Rise of the Phoenix
* High Priest Arakhurn
** Change: Reduced the timer for the first Fire Nova in P3, this should be the minimum duration it can occur (it can bug and be 5s late)

Drowned Halls
* Isskal
** New: Added stop trigger to alert for Ice Shard interrupts.
** Change: Adjusted timers to account for new trigger methods.