@@ -35,7 +35,7 @@ MOD.Ryka = {
 	Available = false,
 	UnitID = nil,
 	TimeOut = 5,
-	ExpertID = "Expert",
+	ExpertID = "U33BFA2635B9791ED",
 	Triggers = {},
 	Settings = {
 		CastBar = KBM.Defaults.CastBar(),
