@@ -34,7 +34,7 @@ MOD.Smouldaron = {
 	Available = false,
 	UnitID = nil,
 	TimeOut = 5,
-	ExpertID = "Expert",
+	ExpertID = "U0CF6D91C2CFA0570",
 	Triggers = {},
 	Settings = {
 		CastBar = KBM.Defaults.CastBar(),
